--- a/templates/docs/examples/base/forms/aligned-radio.html
+++ b/templates/docs/examples/base/forms/aligned-radio.html
@@ -6,34 +6,34 @@
 {% block content %}
 <form>
   <div>
-    <input type="radio" name="RadioOptions1" id="Radio1" value="option1" checked>
+    <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
     <label for="Radio1" class="is-h1">h1</label>
   </div>
   <div>
-    <input type="radio" name="RadioOptions2" id="Radio2" value="option1" checked>
+    <input type="radio" name="RadioOptions" id="Radio2" value="option1">
     <label for="Radio2" class="is-h2">h2</label>
   </div>
   <div>
-    <input type="radio" name="RadioOptions3" id="Radio3" value="option1" checked>
+    <input type="radio" name="RadioOptions" id="Radio3" value="option1">
     <label for="Radio3" class="is-h3">h3</label>
   </div>
   <div>
-    <input type="radio" name="RadioOptions4" id="Radio4" value="option1" checked>
+    <input type="radio" name="RadioOptions" id="Radio4" value="option1">
     <label for="Radio4" class="is-h4">h4</label>
   </div>
   <div>
-    <input type="radio" name="RadioOptions5" id="Radio5" value="option1" checked>
+    <input type="radio" name="RadioOptions" id="Radio5" value="option1">
     <label for="Radio5" class="is-h5">h5, h6, p, default</label>
   </div>
   <div>
-    <input type="radio" name="RadioOptions6" id="Radio6" value="option1" checked>
+    <input type="radio" name="RadioOptions" id="Radio6" value="option1">
     <label for="Radio6" class="is-muted-heading">Muted heading</label>
   </div>
   <table aria-label="Example of radio buttons inside a table">
     <thead>
       <tr>
         <th>
-          <input type="radio" name="RadioOptions7" id="Radio7" value="option1" checked>
+          <input type="radio" name="RadioOptions1" id="Radio7" value="option1" checked>
           <label for="Radio7" class="is-table-header">Table header text</label>
         </th>
         <th>Text in adjacent th</th>
@@ -42,7 +42,7 @@
     <tbody>
       <tr>
         <td>
-          <input type="radio" name="RadioOptions8" id="Radio8" value="option1" checked>
+          <input type="radio" name="RadioOptions1" id="Radio8" value="option1" checked>
           <label for="Radio8" class="is-inline-label">Label</label>
         </td>
         <td>Text in adjacent td</td>
