--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -120,29 +120,29 @@
     <input type="radio" id="radioExampleBase" name="radioExampleBase" name="radioBase">
     <label for="radioExampleBase">radio</label>
 
-    <input type="radio" id="radioExampleBaseChecked" name="radioExampleBaseChecked" name="radioBase" checked>
+    <input type="radio" id="radioExampleBaseChecked" name="radioBase" checked>
     <label for="radioExampleBaseChecked">checked</label>
 
-    <input type="radio" id="radioExampleBaseDisabled" name="radioExampleBaseDisabled" name="radioBase" disabled>
+    <input type="radio" id="radioExampleBaseDisabled" name="radioBase" disabled>
     <label for="radioExampleBaseDisabled">disabled</label>
 
-    <input type="radio" id="radioExampleBaseRequired" name="radioExampleBaseRequired" name="radioBase" required>
+    <input type="radio" id="radioExampleBaseRequired" name="radioBase" required>
     <label class="is-required" for="radioExampleBaseRequired">required</label>
 
-    <input type="radio" id="radioExampleBaseH1" name="radioExampleBaseH1" name="radioBase">
+    <input type="radio" id="radioExampleBaseH1" name="radioBase">
     <label class="is-h1" for="radioExampleBaseH1">.is-h1</label>
 
-    <input type="radio" id="radioExampleBaseH2" name="radioExampleBaseH2" name="radioBase">
+    <input type="radio" id="radioExampleBaseH2" name="radioBase">
     <label class="is-h2" for="radioExampleBaseH2">.is-h2</label>
 
-    <input type="radio" id="radioExampleBaseH3" name="radioExampleBaseH3" name="radioBase">
+    <input type="radio" id="radioExampleBaseH3" name="radioBase">
     <label class="is-h3" for="radioExampleBaseH3">.is-h3</label>
 
-    <input type="radio" id="radioExampleBaseH4" name="radioExampleBaseH4" name="radioBase">
+    <input type="radio" id="radioExampleBaseH4" name="radioBase">
     <label class="is-h4" for="radioExampleBaseH4">.is-h4</label>
 
     <p>
-      <input type="radio" id="radioExampleBaseInline" name="radioExampleBaseInline" name="radioBase">
+      <input type="radio" id="radioExampleBaseInline" name="radioBase">
       <label class="is-inline-label" for="radioExampleBaseInline">.is-inline-label</label>
       alongside some text
     </p>
@@ -151,7 +151,7 @@
       <thead>
         <tr>
           <th>
-            <input type="radio" id="radioExampleBaseTable" name="radioExampleBaseTable" name="radioBase">
+            <input type="radio" id="radioExampleBaseTable" name="radioBase">
             <label class="is-table-header" for="radioExampleBaseTable">.is-table-header</label>
           </th>
           <th>
@@ -162,7 +162,7 @@
       <tbody>
         <tr>
           <td>
-            <input type="radio" id="radioExampleBaseTableCell" name="radioExampleBaseTableCell" name="radioBase">
+            <input type="radio" id="radioExampleBaseTableCell" name="radioBase">
             <label class="is-inline-label" for="radioExampleBaseTableCell">.is-inline-label</label>
           </td>
           <td>
@@ -173,12 +173,12 @@
     </table>
 
     <p class="p-muted-heading">
-      <input type="radio" id="radioExampleBaseMuted" name="radioExampleBaseMuted" name="radioBase">
+      <input type="radio" id="radioExampleBaseMuted" name="radioBase">
       <label class="is-muted-heading" for="radioExampleBaseMuted">.is-muted-heading</label>
     </p>
 
     <p>
-      <input type="radio" id="radioExampleBaseInlineMuted" name="radioExampleBaseInlineMuted" name="radioBase">
+      <input type="radio" id="radioExampleBaseInlineMuted" name="radioBase">
       <label class="is-muted-inline-heading" for="radioExampleBaseInlineMuted">.is-muted-inline-heading</label>
       alongside some text
     </p>
