--- a/templates/docs/examples/templates/tick-element-comparison.html
+++ b/templates/docs/examples/templates/tick-element-comparison.html
@@ -11,8 +11,8 @@
       <div class="col-3">
         <form>
           <input type="checkbox" id="checkExample0" name="checkExample0">
-          <label for="checkExample0">Checkbox option 2</label>
-          <input type="radio" name="RadioOptions0" id="Radio0" value="option1" checked>
+          <label for="checkExample0">Checkbox option 0</label>
+          <input type="radio" name="RadioOptions" id="Radio0" value="option1" checked>
           <label for="Radio0">Radio option 0</label>
         </form>
       </div>
@@ -45,15 +45,15 @@
       <div class="col-3">
         <input type="checkbox" id="checkExample2" name="checkExample2">
         <label for="checkExample2">Checkbox option 2</label>
-        <input type="radio" name="RadioOptions1" id="Radio1" value="option1" checked>
+        <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
         <label for="Radio1">Radio option 1</label>
-        <input type="radio" name="RadioOptions2" id="Radio2" value="option2">
+        <input type="radio" name="RadioOptions" id="Radio2" value="option2">
         <label for="Radio2">Radio option 2</label>
       </div>
       <div class="col-3">
-        <input type="radio" name="RadioOptions3" id="Radio3" value="option3">
+        <input type="radio" name="RadioOptions" id="Radio3" value="option3">
         <label for="Radio3">Radio option 3</label>
-        <input type="radio" name="RadioOptions4" id="Radio4" value="option4">
+        <input type="radio" name="RadioOptions" id="Radio4" value="option4">
         <label for="Radio4">Radio option 4</label>
         <input type="checkbox" id="checkExample3" name="checkExample3" checked>
         <label for="checkExample3">Checkbox option 3</label>
